...
      return null;
    });
  }


  return (
    <View testID="screen-homepage" flex={1}>
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />
      {isLoading || isLoadingHomeContext || !dataLoadedForCurrentFocus ? (
        <ContentLoader viewBox={`0 0 ${width} ${height}`} backgroundColor="#E8E8E8" foregroundColor="#F5F5F5">
          {/* Ícone de Notificação */}
          <Rect x={width - 82} y={106} rx="16" ry="16" width={64} height={64} />

...
                  <Text fontSize={16} fontWeight={500} letterSpacing={-0.14} color={'gray.500'}>
                    Hoje é um belo dia para{'\n'}
                    cuidar da sua saúde! :)
                  </Text>
                </VStack>

                <TouchableOpacity testID="btn-notifications" onPress={() => navigation.navigate('notifications')}>
                  <Box w={14} h={14} bg={'white'} borderRadius={14} alignItems={'center'} justifyContent={'center'}>
                    {unreadCount > 0 && (
                      <Box
                        bg={'#FA4D5E'}
                        minW={5}
                        h={5}
...
