...
      }}
    >
      <Tab.Screen
        name="homepage"
        component={Homepage}
        options={{
          tabBarTestID: 'tab-home',
          tabBarIcon: ({ focused }) => (
            <View>
              <Box
                w={12}
                height={12}
                bg={focused ? '#E6F7F5' : 'transparent'}
...
