...
        <HStack
          flex={1}
          mt={6}
          alignItems="center"
          justifyContent="space-between"
        >
          <FitnessCard title="peso" value="91" unit="kg" />
          <FitnessCard title="Nutrição" value="485" unit="mg" />
        </HStack>

        <HStack
          flex={1}
          mt={6}
...
