...
      const payload = {
        gender: onboardingData.gender,
        weight: onboardingData.weight,
        height: onboardingData.height,
        age: onboardingData.age,
        workoutLevel: onboardingData.physicalLevel,
        humor: onboardingData.humor,
        eatingHabits: selectedHabit,
      };

      setIsLoading(true);
      setOnboardingData(payload);
      await saveOnboarding(payload);
...
