...
                  size="lg"
                  h={14}
                  w="100%"
                  onPress={() => navigation.navigate('mentalHealthForm')}
                />
                <Button
                  testID="btn-mental-go-home"
                  title="Voltar para Início"
                  variant="secondary"
                  size="lg"
                  h={14}
                  w="100%"
                  onPress={() => navigation.navigate('homepage')}
...
